modules/compute/main.tf
resource "aws_security_group" "web_sg" {
  name        = "${var.environment}-web-sg"
  description = "Security group para el servidor web"
  vpc_id      = var.vpc_id

  ingress {
    description = "Permitir trafico HTTP entrante"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Permitir trafico SSH entrante"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["93.156.194.72/32"]
  }

  egress {
    description = "Permitir todo el trafico saliente"
    from_port   = 80
    to_port     = 80
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${var.environment}-web-sg"
  }

}

resource "aws_instance" "web_server" {
  ami                         = "ami-0905a3c97561e0b69" #ID de la imagen representativo
  instance_type               = var.instance_type
  subnet_id                   = var.subnet_id
  vpc_security_group_ids      = [aws_security_group.web_sg.id]
  associate_public_ip_address = true
  user_data_replace_on_change = true

  metadata_options {
    http_endpoint = "enabled"
    http_tokens = "required"
  }

  root_block_device {
    encrypted = true
  }

  user_data = <<-EOF
              #!/bin/bash
              apt-get update
              apt-get install -y nginx
              systemctl enable nginx
              systemctl start nginx
              echo "<h1>Desplegado con arq. modular de Terrafrom</h1>" > /var/www/html/index.html
              EOF

  tags = {
    Name = "${var.environment}-web-server"
  }
}
